--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Optics</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <div id ="container"></div>
-    <script src="main.js"></script>
+<!-- SVG canvas of 400 x 400 pixels -->
+<svg id="mySvg"></svg>
+<!-- Your TypeScript will be compiled into main.js -->
+<script src="main.js"></script>
 </body>
 </html>
