move to modules

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <!-- SVG canvas of 400 x 400 pixels -->
 <svg id="mySvg"></svg>
 <!-- Your TypeScript will be compiled into main.js -->
-<script src="main.js"></script>
+<script type="module" src="dist/main.js"></script>
 </body>
 </html>
